# TravelShot-Agent

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  旅拍助手Agent可落地完整设计方案.md
apps/api/: Dockerfile  pyproject.toml
apps/api/app/: main.py
apps/api/app/agent/: README.md  discovery.py  formatter.py  goal_parser.py  graph.py  llm.py  llm_contracts.py  llm_planner.py  options.py  plan_repair.py  planner.py  react_executor.py  state.py  visual_goal.py
apps/api/app/api/: routes.py
apps/api/app/core/: config.py  date_parser.py
apps/api/app/db/: postgres.py  repository.py  runtime.py
apps/api/app/planning/: route_optimizer.py
apps/api/app/schemas/: plans.py
apps/api/app/scoring/: spot_time_scoring.py
apps/api/app/services/: plan_service.py
apps/api/app/spot/: cities.py  repository.py
apps/api/app/tools/: base.py  cache.py  geocode.py  map.py  search.py  sunlight.py  weather.py
apps/web/: Dockerfile  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: plan-workbench.tsx
apps/web/lib/: api.ts
db/: schema.sql
db/scripts/: geocode_seed_spots.py  import_photo_spots.py
db/seed/: README.md
db/seed/spots/: spots_beijing.jsonl  spots_hangzhou.jsonl  spots_nanjing.jsonl  spots_qingdao.jsonl  spots_sanya.jsonl  spots_xiamen.jsonl
docs/: phase-0.md  phase-1.md  phase-2.md
