[project]
name = "travel-shot-api"
version = "0.1.0"
description = "FastAPI backend for TravelShot Agent phase 4/5."
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.136.1",
  "uvicorn[standard]==0.46.0",
  "pydantic==2.13.3",
  "pydantic-settings==2.6.1",
  "python-dotenv==1.2.2",
  "langgraph==1.1.10",
  "asyncpg==0.31.0",
  "astral==3.2"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
